--- a/index.html
+++ b/index.html
@@ -1,226 +1,160 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>مرحبا بك في موقع فرملية شاوية 🔥</title>
-  <style>
-    :root{
-      --bg:#0f1724; /* dark */
-      --card:#0b1220;
-      --accent:#ff6b6b;
-      --muted:#9aa6b2;
-      --glass: rgba(255,255,255,0.04);
-      --radius:16px;
-      font-family: "Segoe UI", Tahoma, "Helvetica Neue", Arial;
-    }
-    *{box-sizing:border-box}
-    body{
-      margin:0;min-height:100vh;background:linear-gradient(180deg,#071027 0%, #0f1724 100%);color:#e6eef6;display:flex;align-items:center;justify-content:center;padding:24px;
-    }
-    .container{width:100%;max-width:1100px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:20px;padding:28px;box-shadow:0 10px 30px rgba(2,6,23,0.6);display:grid;grid-template-columns:1fr 380px;gap:20px;align-items:start}
-    header{grid-column:1 / -1;display:flex;align-items:center;gap:16px}
-    .logo{width:84px;height:84px;border-radius:14px;overflow:hidden;background:var(--glass);display:flex;align-items:center;justify-content:center}
-    .logo img{max-width:100%;height:100%;object-fit:contain}
-    h1{margin:0;font-size:20px}
-    p.lead{margin:4px 0 0;color:var(--muted)}
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>مركز شحن UC لـ PUBG Mobile</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #1e2129; /* خلفية داكنة */
+            color: #ffffff; /* نص أبيض */
+            margin: 0;
+            padding: 0;
+            text-align: right; /* محاذاة النص لليمين للعربية */
+            direction: rtl;
+        }
 
-    /* left column */
-    .main{background:transparent;padding:12px}
-    .hero{background:linear-gradient(90deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:14px;padding:20px;margin-bottom:16px}
-    .hero h2{margin:0 0 8px}
-    .big-cta{display:flex;gap:12px;align-items:center}
-    .btn{background:var(--accent);border:none;color:#061118;padding:12px 18px;border-radius:12px;font-weight:600;cursor:pointer;box-shadow:0 6px 18px rgba(255,107,107,0.12)}
-    .btn.ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--muted);box-shadow:none}
-    .stream-card{margin-top:12px;padding:12px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));display:flex;gap:12px;align-items:center}
-    .stream-thumb{width:120px;height:70px;border-radius:8px;background:linear-gradient(90deg,#061426,#092033);display:flex;align-items:center;justify-content:center;font-size:12px;color:var(--muted)}
+        .header {
+            background-color: #007bff; /* شريط علوي أزرق */
+            padding: 15px 0;
+            text-align: center;
+            border-bottom: 3px solid #ffc107; /* شريط أصفر */
+        }
 
-    /* right column */
-    .side{background:var(--card);padding:18px;border-radius:14px}
-    .socials{display:flex;flex-direction:column;gap:10px}
-    .social-btn{display:flex;align-items:center;gap:10px;padding:10px;border-radius:10px;background:linear-gradient(180deg, rgba(255,255,255,0.01), rgba(255,255,255,0.02));cursor:pointer}
-    .muted{color:var(--muted);font-size:13px}
+        .header h1 {
+            margin: 0;
+            color: #ffffff;
+            font-size: 28px;
+        }
 
-    footer{grid-column:1 / -1;margin-top:10px;color:var(--muted);font-size:13px;display:flex;justify-content:space-between;align-items:center}
+        .container {
+            max-width: 800px;
+            margin: 30px auto;
+            padding: 20px;
+            background-color: #2a2e37; /* خلفية المحتوى */
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        }
 
-    /* modal */
-    .overlay{position:fixed;inset:0;background:rgba(2,6,23,0.6);display:none;align-items:center;justify-content:center;padding:20px}
-    .modal{width:100%;max-width:420px;background:linear-gradient(180deg,#071521,#08202b);padding:18px;border-radius:14px;border:1px solid rgba(255,255,255,0.03)}
-    .field{display:flex;flex-direction:column;gap:6px;margin-bottom:12px}
-    input[type=text],input[type=password]{padding:10px;border-radius:10px;border:1px solid rgba(255,255,255,0.04);background:transparent;color:inherit}
+        .section-title {
+            color: #ffc107;
+            border-bottom: 2px solid #007bff;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+            font-size: 22px;
+        }
 
-    .small{font-size:13px}
+        .input-group label {
+            display: block;
+            margin-bottom: 8px;
+            font-weight: bold;
+        }
 
-    /* responsive */
-    @media (max-width:900px){.container{grid-template-columns:1fr;}
-      .logo{width:68px;height:68px}
-    }
-  </style>
+        .input-group input[type="text"] {
+            width: 98%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #444;
+            background-color: #333;
+            color: #fff;
+            border-radius: 5px;
+        }
+
+        .uc-option {
+            background-color: #333742;
+            border: 2px solid #555;
+            padding: 15px;
+            margin-bottom: 15px;
+            border-radius: 8px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            transition: all 0.3s;
+            cursor: pointer;
+        }
+
+        .uc-option:hover {
+            border-color: #ffc107;
+            background-color: #3e424c;
+        }
+
+        .uc-amount {
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffffff;
+        }
+
+        .uc-price {
+            font-size: 16px;
+            color: #007bff;
+            font-weight: bold;
+        }
+
+        .btn-checkout {
+            background-color: #ffc107;
+            color: #1e2129;
+            padding: 15px 30px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            display: block;
+            width: 100%;
+            margin-top: 30px;
+            transition: background-color 0.3s;
+        }
+
+        .btn-checkout:hover {
+            background-color: #e0a800;
+        }
+    </style>
 </head>
 <body>
-  <div class="container" role="main">
-    <header>
-      <div class="logo" aria-hidden>
-        <!-- ضع logo.png في نفس المجلد مع هذا الملف -->
-        <img src="logo.png" alt="لوجو فرملية" onerror="this.style.opacity=.5;this.alt='logo not found'">
-      </div>
-      <div>
-        <h1>مرحبا بك في موقع فرملية شاوية 🔥</h1>
-        <p class="lead">منصة تعليمية/تجريبية — الواجهة المصممة للاختبار والشرح.</p>
-      </div>
-    </header>
 
-    <section class="main">
-      <div class="hero">
-        <h2>بث مباشر (وهمي) — تعلّم وجرب</h2>
-        <p class="muted">اضغط الزر للانتقال إلى صفحة البث الوهمية أو لتسجيل الدخول لمشاهدة البث.</p>
-
-        <div class="big-cta" style="margin-top:12px">
-          <button class="btn" id="watchBtn">للمشاهدة البث المباشر قم بتسجيل الدخول</button>
-          <button class="btn ghost" id="loginBtn">تسجيل دخول</button>
-        </div>
-
-        <div class="stream-card">
-          <div class="stream-thumb">بث تجريبي</div>
-          <div>
-            <div style="font-weight:700">عنوان البث: تجربة فرملية</div>
-            <div class="muted small">المشاهدون: 0 — الحالة: غير مباشر (وهمي)</div>
-          </div>
-        </div>
-      </div>
-
-      <div class="hero">
-        <h2>ملاحظات الأمان</h2>
-        <p class="muted">لا تضع توكنات أو بيانات حساسة داخل جافاسكربت ظاهري. هذا مثال توضيحي فقط.</p>
-        <pre class="small" style="background:rgba(255,255,255,0.02);padding:10px;border-radius:8px;overflow:auto">// CONFIG: ضع قيمك هنا أثناء التطوير فقط
-const CONFIG = {
-  CHAT_ID: "PUT_CHAT_ID_HERE",
-  BOT_TOKEN: "PUT_TOKEN_HERE"
-};</pre>
-      </div>
-
-    </section>
-
-    <aside class="side">
-      <h3 style="margin-top:0">روابط واجهات تعليمية</h3>
-      <div class="socials">
-        <div class="social-btn" onclick="fakeNavigate('google')">
-          <strong>واجهة جوجل (تعليمي)</strong>
-          <span class="muted">عرض واجهة رئيسية مبسطة</span>
-        </div>
-        <div class="social-btn" onclick="fakeNavigate('tiktok')">
-          <strong>واجهة TikTok (تعليمي)</strong>
-          <span class="muted">استلهام من نمط الفيديو القصير</span>
-        </div>
-        <div class="social-btn" onclick="fakeNavigate('facebook')">
-          <strong>واجهة Facebook (تعليمي)</strong>
-          <span class="muted">نماذج مشاركة وتايم لاين</span>
-        </div>
-      </div>
-      <hr style="margin:12px 0;border-color:rgba(255,255,255,0.02)">
-      <div>
-        <div class="muted">حالة الاتصال بالبوت:</div>
-        <div id="botStatus" class="muted small">غير متصل</div>
-      </div>
-    </aside>
-
-    <footer>
-      <div>© فرملية — للاستخدام التعليمي فقط</div>
-      <div class="muted">صنع بحب ❤️</div>
-    </footer>
-  </div>
-
-  <!-- مودال تسجيل الدخول -->
-  <div class="overlay" id="overlay" role="dialog" aria-modal="true" aria-hidden="true">
-    <div class="modal" role="document">
-      <h3>تسجيل الدخول</h3>
-      <div class="field">
-        <label class="small">اسم المستخدم</label>
-        <input type="text" id="username" placeholder="ادخل اسم المستخدم">
-      </div>
-      <div class="field">
-        <label class="small">كلمة المرور</label>
-        <input type="password" id="password" placeholder="ادخل كلمة المرور">
-      </div>
-      <div style="display:flex;gap:8px;justify-content:flex-end">
-        <button class="btn ghost" id="closeModal">إلغاء</button>
-        <button class="btn" id="submitLogin">المتابعة ب في…</button>
-      </div>
+    <div class="header">
+        <h1>مركز شحن UC الرسمي</h1>
+        <p>اختر حزمتك وابدأ اللعب!</p>
     </div>
-  </div>
 
-  <script>
-    // Simple UI behavior
-    const overlay = document.getElementById('overlay');
-    document.getElementById('loginBtn').addEventListener('click', ()=>{ openModal(); });
-    document.getElementById('closeModal').addEventListener('click', ()=>{ closeModal(); });
-    document.getElementById('watchBtn').addEventListener('click', ()=>{ openModal(); });
+    <div class="container">
+        <h2 class="section-title">1. إدخال هوية اللاعب (ID)</h2>
+        <div class="input-group">
+            <label for="player-id">الرقم التعريفي للاعب (Player ID)</label>
+            <input type="text" id="player-id" placeholder="أدخل الرقم التعريفي المكون من 10 أرقام" required>
+        </div>
 
-    function openModal(){
-      overlay.style.display = 'flex';
-      overlay.setAttribute('aria-hidden','false');
-    }
-    function closeModal(){
-      overlay.style.display = 'none';
-      overlay.setAttribute('aria-hidden','true');
-    }
+        <h2 class="section-title">2. اختيار كمية UC</h2>
 
-    document.getElementById('submitLogin').addEventListener('click', ()=>{
-      const u = document.getElementById('username').value.trim();
-      const p = document.getElementById('password').value.trim();
-      if(!u || !p){ alert('عليك إدخال اسم المستخدم وكلمة المرور.'); return; }
-      // mock login flow
-      closeModal();
-      showRightToast('تم تسجيل الدخول كمستخدم: ' + u);
-      // update fake bot status
-      document.getElementById('botStatus').textContent = 'متصل (تجريبي)';
-    });
+        <div class="uc-option">
+            <span class="uc-amount">60 UC</span>
+            <span class="uc-price">2.99 دولار أمريكي</span>
+        </div>
 
-    // small toast from the right (matches your request of animated rectangle from the right)
-    function showRightToast(msg){
-      const box = document.createElement('div');
-      box.textContent = msg;
-      box.style.position='fixed';
-      box.style.right='20px';
-      box.style.top='20px';
-      box.style.background='linear-gradient(90deg, rgba(255,255,255,0.03), rgba(255,255,255,0.01))';
-      box.style.padding='14px 18px';
-      box.style.borderRadius='10px';
-      box.style.boxShadow='0 8px 20px rgba(2,6,23,0.6)';
-      box.style.zIndex=9999;
-      box.style.transform='translateX(120%)';
-      box.style.transition='transform 450ms cubic-bezier(.2,.9,.2,1), opacity 300ms';
-      document.body.appendChild(box);
-      requestAnimationFrame(()=>{ box.style.transform='translateX(0)'; });
-      setTimeout(()=>{ box.style.opacity=0; box.style.transform='translateX(120%)'; setTimeout(()=>box.remove(),400); }, 3500);
-    }
+        <div class="uc-option">
+            <span class="uc-amount">300 + 25 UC مجانية</span>
+            <span class="uc-price">14.99 دولار أمريكي</span>
+        </div>
 
-    // fake navigation for educational UIs
-    function fakeNavigate(which){
-      showRightToast('فتح ' + which + ' (وهمي للتعليم).');
-    }
+        <div class="uc-option">
+            <span class="uc-amount">600 + 60 UC مجانية</span>
+            <span class="uc-price">29.99 دولار أمريكي</span>
+        </div>
 
-    // Example: function to send data to Telegram bot via fetch
-    // NOTE: for real use, call this from server-side and keep token secret.
-    async function sendToTelegram(chatId, token, text){
-      if(!chatId || !token){ console.warn('Missing chatId/token'); return {ok:false,description:'missing'}; }
-      try{
-        const url = `https://api.telegram.org/bot${token}/sendMessage`;
-        const res = await fetch(url, {
-          method:'POST',
-          headers:{'Content-Type':'application/json'},
-          body: JSON.stringify({chat_id: chatId, text})
-        });
-        return await res.json();
-      }catch(err){
-        console.error(err);
-        return {ok:false,description:err.message};
-      }
-    }
+        <div class="uc-option">
+            <span class="uc-amount">1500 + 300 UC مجانية</span>
+            <span class="uc-price">74.99 دولار أمريكي</span>
+        </div>
 
-    // DEBUG: if you want to test sending (remember: token must be kept secret!)
-    // sendToTelegram('PUT_CHAT_ID_HERE','PUT_TOKEN_HERE','اختبار من فرملية').then(r=>console.log(r));
+        <h2 class="section-title">3. اختيار طريقة الدفع</h2>
+        <div class="input-group">
+            <p>اختر طريقة الدفع (Visa / MasterCard / PayPal / رصيد الهاتف)</p>
+        </div>
 
-  </script>
+        <button class="btn-checkout">متابعة إلى الدفع</button>
+    </div>
+
 </body>
 </html>
+
