--- a/index.html
+++ b/index.html
@@ -6,127 +6,124 @@
 <title>APP JOJO ♡ JASSER</title>
 <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
 <style>
-  :root{
-    --bg1:#0b0520; --bg2:#3a0066; --accent:#ff62b3; --paper:#fff8f5; --text-dark:#3b2340;
-  }
-  *{box-sizing:border-box}
-  body{
-    margin:0; min-height:100vh;
-    font-family:'Cairo',sans-serif;
-    background: radial-gradient(800px 400px at 10% 10%, rgba(255,99,180,0.05), transparent),
-                linear-gradient(180deg,var(--bg1),var(--bg2));
-    color:#fff; display:flex; flex-direction:column; align-items:center; padding:28px;
-    overflow:hidden;
-  }
+:root{
+  --bg1:#081126; --bg2:#3b0066; --accent:#ff5fb4; --paper:#fff8f5; --text-dark:#3b2340;
+  --petal1:#ffb6e6; --petal2:#ffd6fb; --petal3:#ff9ad4;
+}
+*{box-sizing:border-box}
+body{
+  margin:0; min-height:100vh;
+  font-family:'Cairo',sans-serif;
+  background:
+    radial-gradient(700px 400px at 10% 10%, rgba(255,95,180,0.05), transparent),
+    linear-gradient(180deg,var(--bg1),var(--bg2));
+  color:#fff; display:flex; flex-direction:column; align-items:center; padding:28px; overflow:hidden;
+}
 
-  /* ===== العنوان العلوي مع خط مركزي ثم ظهور النص ===== */
-  .header {
-    width:100%; max-width:920px; display:flex; justify-content:center; align-items:center; flex-direction:column;
-    margin-top:6px;
-  }
-  .line {
-    width:2px; height:0; background:linear-gradient(180deg,#ffb1de,#ff5fb4); border-radius:2px;
-    opacity:0.9; transform-origin: top center;
-    animation: drawLine 700ms ease forwards;
-  }
-  @keyframes drawLine { from {height:0;} to {height:60px;} }
+/* ===== Header: الخط العمودي ثم العنوان يظهر من اليمين ===== */
+.header {
+  width:100%; max-width:960px; display:flex; flex-direction:column; align-items:center; gap:8px;
+}
+.line {
+  width:2px; height:0; background:linear-gradient(180deg,#ffd6fb,#ff9ad4); border-radius:2px;
+  opacity:0.95; transform-origin: top center; animation: drawLine 700ms ease forwards;
+}
+@keyframes drawLine { from {height:0;} to {height:72px;} }
 
-  .title {
-    margin-top:14px; font-size:32px; font-weight:900; letter-spacing:1px;
-    opacity:0; transform: translateY(-6px);
-    color: #fff;
-    text-shadow: 0 8px 30px rgba(255,80,150,0.12);
-    animation: fadeInTitle 900ms ease 500ms forwards;
-  }
-  @keyframes fadeInTitle { to {opacity:1; transform:none;} }
+/* عنوان ينزلق من اليمين */
+.title {
+  font-size:34px; font-weight:900; letter-spacing:1px; opacity:0; transform:translateX(40px);
+  display:inline-block; animation: slideIn 700ms cubic-bezier(.2,.9,.2,1) 900ms forwards;
+  -webkit-background-clip: text; background-clip:text;
+  background: linear-gradient(90deg,#ffd6fb,#ff7ab6 40%, #ffd6fb 100%); color:transparent;
+  text-shadow: 0 12px 30px rgba(255,100,170,0.08);
+}
+@keyframes slideIn {
+  to { opacity:1; transform:none; }
+}
 
-  .title .glow {
-    display:inline-block;
-    background: linear-gradient(90deg,#ffd6fb 0%, #ff9ad4 50%, #ffd6fb 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    filter: drop-shadow(0 6px 18px rgba(142,45,226,0.15));
-  }
+/* subtle fade out a bit but keep visible (not vanish completely) */
+.title.faded { animation: fadeTitle 1s ease 4s forwards; }
+@keyframes fadeTitle { to { opacity:0.65; transform:translateY(-6px);} }
 
-  /* heart with date inside */
-  .heart {
-    margin-top:8px;
-    width:72px;height:72px;border-radius:999px;
-    background:linear-gradient(180deg,#ff84c3,#ff4aa3);
-    display:flex;align-items:center;justify-content:center;font-weight:900;color:#fff;
-    box-shadow:0 14px 40px rgba(255,70,150,0.12);
-    position:relative;
-  }
-  .heart .date { font-size:11px;font-weight:700; text-align:center; line-height:1; }
+/* قلب يحتوي على التاريخ */
+.heart {
+  width:68px;height:68px;border-radius:999px;
+  background:linear-gradient(180deg,#ff7ab6,#ff3b90);
+  display:flex;align-items:center;justify-content:center;font-weight:900;color:#fff;
+  box-shadow:0 14px 40px rgba(255,70,150,0.12); position:relative;
+  margin-top:6px;
+}
+.heart .date { font-size:11px; font-weight:700; text-align:center; line-height:1; }
 
-  /* ===== منطقة الصندوق والورقة ===== */
-  .stage { width:100%; max-width:640px; margin-top:36px; display:flex; justify-content:center; align-items:center; position:relative; padding:20px; }
-  .gift { width:260px; height:200px; position:relative; perspective:1200px; cursor:pointer; }
-  /* قاعدة الصندوق */
-  .box-base {
-    width:100%; height:64%; background: linear-gradient(180deg,#3b002f,#210016);
-    border-radius:14px; position:absolute; bottom:0; left:0; z-index:6;
-    box-shadow: 0 26px 60px rgba(0,0,0,0.6);
-    display:flex; align-items:center; justify-content:center; overflow:visible;
-    transform-origin: center top; transition: transform 700ms cubic-bezier(.2,.95,.15,1), opacity 600ms ease;
-  }
-  .ribbon-vertical { position:absolute; left:50%; transform:translateX(-50%); width:40px; height:100%; border-radius:6px; background: linear-gradient(180deg,#ff9bd1,#ff4aa3); z-index:7; }
-  .ribbon-horizontal { position:absolute; top:30%; left:0; width:100%; height:34px; border-radius:8px; background: linear-gradient(90deg,#ff9bd1,#ff4aa3); z-index:7; }
-  .bow {
-    position:absolute; top:-18px; left:50%; transform:translateX(-50%) rotate(-10deg); width:96px; height:56px; border-radius:20px;
-    background: linear-gradient(180deg,#ffd1e8,#ff86c4); z-index:9; box-shadow: 0 8px 26px rgba(255,91,158,0.12);
-  }
-  .bow:before, .bow:after { content:""; position:absolute; width:36px; height:42px; background:inherit; border-radius:10px; top:8px;}
-  .bow:before { left:6px; transform: rotate(-28deg); }
-  .bow:after { right:6px; transform: rotate(28deg); }
+/* ===== Back decoration: petals (floating) ===== */
+.petal {
+  position:absolute; width:18px; height:22px; border-radius:8px;
+  opacity:0.95; transform-origin:center; pointer-events:none;
+  filter: drop-shadow(0 6px 18px rgba(0,0,0,0.25));
+}
+@keyframes floatPetal {
+  from { transform: translateY(-20vh) rotate(0deg) scale(0.9); opacity:0; }
+  20% { opacity:1; }
+  to { transform: translateY(120vh) rotate(720deg) scale(1.1); opacity:0; }
+}
 
-  /* الغطاء (lid) */
-  .box-lid {
-    width:100%; height:50%; position:absolute; top:0; left:0; border-radius:14px; background: linear-gradient(180deg,#6f0045,#3a001f);
-    transform-origin: top center; z-index:10; transition: transform 700ms cubic-bezier(.2,.95,.15,1), opacity 600ms ease;
-    box-shadow: 0 26px 40px rgba(0,0,0,0.5);
-  }
+/* ===== Gift area ===== */
+.stage { width:100%; max-width:680px; margin-top:32px; display:flex; justify-content:center; align-items:center; position:relative; padding:20px; }
+.gift { width:260px; height:200px; position:relative; perspective:1200px; cursor:pointer; }
+.box-base {
+  width:100%; height:64%; background: linear-gradient(180deg,#3b002f,#210016);
+  border-radius:14px; position:absolute; bottom:0; left:0; z-index:6; box-shadow:0 26px 60px rgba(0,0,0,0.6);
+  display:flex; align-items:center; justify-content:center; overflow:visible; transform-origin:center top;
+  transition: transform 700ms cubic-bezier(.2,.95,.15,1), opacity 600ms ease;
+}
+.ribbon-vertical { position:absolute; left:50%; transform:translateX(-50%); width:40px; height:100%; border-radius:6px; background: linear-gradient(180deg,#ff9bd1,#ff4aa3); z-index:7; }
+.ribbon-horizontal { position:absolute; top:30%; left:0; width:100%; height:34px; border-radius:8px; background: linear-gradient(90deg,#ff9bd1,#ff4aa3); z-index:7; }
+.bow { position:absolute; top:-18px; left:50%; transform:translateX(-50%) rotate(-10deg); width:96px; height:56px; border-radius:20px; background: linear-gradient(180deg,#ffd1e8,#ff86c4); z-index:9; box-shadow:0 8px 26px rgba(255,91,158,0.12); }
+.box-lid {
+  width:100%; height:50%; position:absolute; top:0; left:0; border-radius:14px; background: linear-gradient(180deg,#6f0045,#3a001f);
+  transform-origin: top center; z-index:10; transition: transform 700ms cubic-bezier(.2,.95,.15,1), opacity 600ms ease; box-shadow:0 26px 40px rgba(0,0,0,0.5);
+}
 
-  /* الورقة (الملاحظة) */
-  .note {
-    position:absolute; left:50%; transform:translateX(-50%) translateY(8px) rotate(-8deg);
-    top:44%; width:180px; padding:16px; background: var(--paper); color: var(--text-dark);
-    border-radius:10px; box-shadow: 0 26px 60px rgba(0,0,0,0.35); opacity:0; z-index:4;
-    transform-origin: bottom center; transition: all 900ms cubic-bezier(.2,.9,.2,1); text-align:center;
-    font-weight:700; line-height:1.35;
-  }
+/* الورقة (الملاحظة) */
+.note {
+  position:absolute; left:50%; transform:translateX(-50%) translateY(8px) rotate(-8deg);
+  top:44%; width:200px; padding:18px; background: var(--paper); color: var(--text-dark);
+  border-radius:10px; box-shadow: 0 26px 60px rgba(0,0,0,0.35); opacity:0; z-index:4;
+  transform-origin: bottom center; transition: all 900ms cubic-bezier(.2,.9,.2,1); text-align:center; font-weight:700; line-height:1.35;
+}
 
-  /* ظهور الورقة واختفاء الصندوق */
-  .opened .box-lid { transform: translateY(-20px) rotateX(65deg) scale(1.02); opacity:0; }
-  .opened .box-base { opacity:0; transform: translateY(12px) scale(0.9); pointer-events:none; }
-  .opened .note { opacity:1; top:-22%; transform:translateX(-50%) translateY(0) rotate(0deg); z-index:30; }
+/* عند الفتح: اختفاء الصندوق وظهور الورقة */
+.opened .box-lid { transform: translateY(-20px) rotateX(65deg) scale(1.02); opacity:0; }
+.opened .box-base { opacity:0; transform: translateY(12px) scale(0.9); pointer-events:none; }
+.opened .note { opacity:1; top:-22%; transform:translateX(-50%) translateY(0) rotate(0deg); z-index:30; }
 
-  /* الرسالة داخل الورقة */
-  .message { font-size:15px; color:#4b2340; }
-  .message .from { display:block; margin-top:10px; font-weight:900; color:#2b1840; font-size:15px; }
+/* الرسالة داخل الورقة */
+.message { font-size:15px; color:#4b2340; }
+.message .from { display:block; margin-top:10px; font-weight:900; color:#2b1840; font-size:15px; }
 
-  /* confetti canvas */
-  .confetti { position: fixed; inset:0; pointer-events:none; z-index:1000; }
+/* زر تشغيل/ايقاف الموسيقى */
+.audio-toggle {
+  position:fixed; right:16px; bottom:16px; z-index:1200;
+  background:linear-gradient(90deg,#ff9bd1,#ff4aa3); color:#fff; border:none; padding:10px 14px; border-radius:999px; font-weight:800; cursor:pointer; box-shadow:0 8px 24px rgba(255,90,150,0.14);
+}
 
-  /* responsive */
-  @media (max-width:480px){
-    .gift { width:200px; height:150px; }
-    .note { width:150px; top:44% }
-    .title { font-size:24px }
-    .heart { width:60px;height:60px }
-  }
+/* confetti canvas (above everything) */
+.confetti { position:fixed; inset:0; pointer-events:none; z-index:1000; }
+
+/* responsive */
+@media (max-width:480px){
+  .gift{width:200px;height:150px;} .note{width:160px; top:44%} .title{font-size:24px} .heart{width:60px;height:60px}
+}
 </style>
 </head>
 <body>
 
   <div class="header" aria-hidden="false">
     <div class="line" id="line"></div>
-    <div class="title" id="titleText"><span class="glow">APP JOJO ♡ JASSER</span></div>
-    <div style="margin-top:8px;">
-      <div class="heart" aria-hidden="true">
-        <div class="date" id="dateInHeart"></div>
-      </div>
+    <div class="title" id="titleText"><span>APP JOJO ♡ JASSER</span></div>
+    <div style="margin-top:6px;">
+      <div class="heart" aria-hidden="true"><div class="date" id="dateInHeart"></div></div>
     </div>
   </div>
 
@@ -147,11 +144,15 @@
   </div>
 
   <canvas class="confetti" id="confettiCanvas"></canvas>
+  <button class="audio-toggle" id="audioToggle">تشغيل الموسيقى</button>
+
+  <!-- ضع ملف romantic.mp3 في نفس المجلد (أو غيّر المسار هنا) -->
+  <audio id="bgm" src="romantic.mp3" preload="auto" loop></audio>
 
 <script>
-/* ========= إعداد الرسائل اليومية ========= */
+/* ======== رسائل يومية ======== */
 const messages = [
-  "جوجو الحبيبة، كل يومٍ معكِ يكبر قلبي فرحًا — ابتسامتكِ نوري.",
+  "جوجو الحبيبة، كل يومٍ معكِ يكبر قلبي فرحًا — ضحكتكِ نوري.",
   "حبيبتي جوجو، أنتِ الحلم الذي تحقّق في أيامي. أحبكِ بلا حدود.",
   "جوجو الغالية، كل لحظة بقربك أجمل من كل ما مرّ — وأنتِ سر سعادتي.",
   "إلى جوجو، يا أجمل نعمة، شكراً لوجودك؛ أحبكِ بكل نبضة في قلبي.",
@@ -163,64 +164,102 @@ const messages = [
   "جوجو الحبيبة، معكِ تعلمتُ معنى السعادة الحقيقية — دمتِ لي نورًا."
 ];
 
-// احسب فهرس الرسالة اعتماداً على التاريخ (ثابت لكل يوم)
 function getDayIndex(date = new Date()){
-  // نستخدم عدد الأيام منذ 1 يناير 1970
   const msPerDay = 24*60*60*1000;
   const days = Math.floor(date.getTime() / msPerDay);
   return days % messages.length;
 }
-
-// تحديث نص الرسالة في الصفحة حسب اليوم
 function updateDailyMessage(){
   const idx = getDayIndex(new Date());
   const text = messages[idx];
   document.getElementById('messageText').innerHTML = text;
-  // خزّن آخر تاريخ معروض (تنبيه لو أردت)
   localStorage.setItem('last_message_date', new Date().toDateString());
 }
 
-// جدولة التحديث عند منتصف الليل القادم
-function scheduleMidnightUpdate(){
-  const now = new Date();
-  const tomorrow = new Date(now.getFullYear(), now.getMonth(), now.getDate()+1);
-  const msUntilMidnight = tomorrow.getTime() - now.getTime();
-  setTimeout(()=>{
-    updateDailyMessage();
-    // بعد أول تحديث اضبط interval كل 24 ساعة
-    setInterval(updateDailyMessage, 24*60*60*1000);
-  }, msUntilMidnight + 100); // +100ms لتأمين
-}
-
-/* ========= ضبط التاريخ داخل القلب ========= */
-const dateEl = document.getElementById('dateInHeart');
+/* ======== عرض التاريخ في القلب ======== */
 function showDate(){
   const d = new Date();
-  dateEl.textContent = d.toLocaleDateString('ar-DZ', { year:'numeric', month:'long', day:'numeric' });
+  document.getElementById('dateInHeart').textContent =
+    d.toLocaleDateString('ar-DZ', { year:'numeric', month:'long', day:'numeric' });
 }
 showDate();
-
-/* ========= تهيئة الرسالة اليومية عند التحميل ========= */
 updateDailyMessage();
-scheduleMidnightUpdate();
 
-/* ========= فتح الهدية: إخفاء الصندوق واظهار الورقة + confetti ========= */
+/* ======== Title fade small tweak after showing ======== */
+window.addEventListener('load', ()=> {
+  const title = document.getElementById('titleText');
+  // بعد 4.5 ثانية نجعل العنوان هادئ قليلاً (ليس اختفاء كامل)
+  setTimeout(()=> title.classList.add('faded'), 4500);
+});
+
+/* ======== Petals background generation ======== */
+function spawnPetals(n=14){
+  for(let i=0;i<n;i++){
+    const p = document.createElement('div');
+    p.className='petal';
+    const size = 10 + Math.random()*28;
+    p.style.width = size+'px';
+    p.style.height = (size*1.1)+'px';
+    const colors = [getComputedStyle(document.documentElement).getPropertyValue('--petal1').trim(),
+                    getComputedStyle(document.documentElement).getPropertyValue('--petal2').trim(),
+                    getComputedStyle(document.documentElement).getPropertyValue('--petal3').trim()];
+    p.style.background = colors[Math.floor(Math.random()*colors.length)];
+    p.style.left = (Math.random()*100)+'%';
+    p.style.top = (-20 - Math.random()*30)+'%';
+    p.style.opacity = 0.95;
+    p.style.transform = `rotate(${Math.random()*360}deg)`;
+    p.style.animation = `floatPetal ${8+Math.random()*10}s linear ${Math.random()*2}s forwards`;
+    document.body.appendChild(p);
+    // remove eventually
+    setTimeout(()=> p.remove(), 20000);
+  }
+}
+spawnPetals(18);
+setInterval(()=> spawnPetals(8), 7000);
+
+/* ======== Gift open behavior & confetti ======== */
 const gift = document.getElementById('giftCard');
 const confettiCanvas = document.getElementById('confettiCanvas');
-
 let opened = false;
+
 gift.addEventListener('click', openGift);
 
 function openGift(){
   if(opened) return;
   opened = true;
-  // إضافة صنف opened يؤدي لاختفاء الصندوق وظهور الورقة
   gift.classList.add('opened');
-  // مؤثر Confetti
+  updateDailyMessage();
+  playMusicIfPossible();
   launchConfetti();
 }
 
-/* ===== Confetti بسيط canvas ===== */
+/* ======== Audio handling ======== */
+const bgm = document.getElementById('bgm');
+const audioToggle = document.getElementById('audioToggle');
+let audioPlaying = false;
+
+// حاول التشغيل التلقائي (سيُرفض غالبًا بدون تفاعل) — نتجاهل الأخطاء
+bgm.play().then(()=> { audioPlaying = true; audioToggle.textContent = 'إيقاف الموسيقى'; })
+.catch(()=> { /* ممنوع تلقائياً -> سينطلق بعد التفاعل */ });
+
+// تشغيل عند فتح الهدية إذا لم يشغل تلقائياً
+function playMusicIfPossible(){
+  if(audioPlaying) return;
+  bgm.play().then(()=> { audioPlaying = true; audioToggle.textContent = 'إيقاف الموسيقى'; })
+  .catch(()=> { /* لا مشكلة */ });
+}
+
+// زر تشغيل/ايقاف
+audioToggle.addEventListener('click', ()=>{
+  if(!audioPlaying){
+    bgm.play().then(()=> { audioPlaying = true; audioToggle.textContent = 'إيقاف الموسيقى'; })
+    .catch(()=> { alert('التشغيل تلقائيًا محجوب — اضغط أولًا على الهدية أو تفاعل مع الصفحة.'); });
+  } else {
+    bgm.pause(); bgm.currentTime = 0; audioPlaying = false; audioToggle.textContent = 'تشغيل الموسيقى';
+  }
+});
+
+/* ======== Confetti (canvas) ======== */
 function launchConfetti(){
   try {
     const canvas = confettiCanvas;
@@ -230,12 +269,11 @@ function launchConfetti(){
     const pieces = [];
     const colors = ['#ff5fb4','#ffd166','#7afcff','#8b5cf6','#ff8a66','#ffd6fb'];
 
-    for(let i=0;i<80;i++){
+    for(let i=0;i<100;i++){
       pieces.push({
         x: Math.random()*W,
-        y: Math.random()*H - H*0.4,
+        y: Math.random()*H - H*0.3,
         r: 6 + Math.random()*10,
-        d: Math.random()*40 + 10,
         color: colors[Math.floor(Math.random()*colors.length)],
         tilt: Math.random()*10 - 10,
         tiltAngle: Math.random()*Math.PI
@@ -258,7 +296,7 @@ function launchConfetti(){
         ctx.restore();
       }
       t++;
-      if(t < 180) requestAnimationFrame(draw);
+      if(t < 200) requestAnimationFrame(draw);
       else ctx.clearRect(0,0,W,H);
     }
     draw();
@@ -268,10 +306,17 @@ function launchConfetti(){
   }
 }
 
-/* ===== عند تحميل الصفحة شغّل الحركات الأولية (الخط ثم العنوان) ===== */
-window.addEventListener('load', ()=> {
-  // خط وظهور العنوان مُطبّقان عبر CSS animation عند التحميل
-});
+/* ======== Schedule daily update at midnight (optional) ======== */
+function scheduleMidnightUpdate(){
+  const now = new Date();
+  const tomorrow = new Date(now.getFullYear(), now.getMonth(), now.getDate()+1);
+  const msUntilMidnight = tomorrow.getTime() - now.getTime();
+  setTimeout(()=> {
+    updateDailyMessage();
+    setInterval(updateDailyMessage, 24*60*60*1000);
+  }, msUntilMidnight + 100);
+}
+scheduleMidnightUpdate();
 </script>
 </body>
 </html>
